<resources>
    <string name="app_name">IntentsLearning</string>
    <string name="app_title">Kodu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>